# Bitlyfier

./: .gitignore  Makefile.am  README  autogen.sh  bitlyfier.vide  configure.ac
po/: Makefile.in  POTFILES  POTFILES.in  sv.po
src/: Makefile.am  application.vala  bitly.vala  bitlyfier.desktop  bitlyfier.desktop.in  main.vala  mainwindow.vala
src/ui/: bitlyfier-small.xcf  bitlyfier.xcf  windows.ui
